# RAG_-Project-US-Tax-Laws-

./: .gitattributes  .gitignore  Dockerfile  README.md  api_main.py  bm25_index.pkl  build_index.py  chunks.pkl  corpus_hash.txt  implementation_plan.md  links.md  main.py  prompts.md  pyproject.toml  requirements.txt
data/faiss_index/: index.faiss  index.pkl
golden_set/: golden_set.csv
src/api/: app.py  schemas.py
src/api/templates/: index.html
src/config/: config.py
src/document_ingestion/: document_processor.py
src/vectorstore/: hybrid_retriever.py  vectorstore.py
